# rag

./: .gitignore  Cargo.toml  LICENSE  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml
crates/extract-core/: Cargo.toml
crates/extract-core/src/: lib.rs  markdown.rs  pandoc.rs  pdf.rs
crates/rag-cli/: Cargo.toml
crates/rag-cli/src/: cli.rs  exit_codes.rs  main.rs
crates/rag-cli/src/commands/: add.rs  (+11 more)
crates/rag-core/: Cargo.toml
crates/rag-core/src/: chunk.rs  error.rs  ignore.rs  info.rs  lib.rs  status.rs  vault.rs
crates/rag-core/src/config/: keys.rs  mod.rs
crates/rag-core/src/db/: connection.rs  migrations.rs  mod.rs
crates/rag-core/src/db/migrations/: 001_initial.sql  002_drop_chunks_unique_idx.sql
crates/rag-core/src/embed/: candle.rs  mod.rs
crates/rag-core/src/extract/: mod.rs  pandoc.rs  plaintext.rs
crates/rag-core/src/index/: mod.rs  pipeline.rs  reconcile.rs
crates/rag-core/src/registry/: add.rs  mod.rs  prune.rs  rm.rs  status.rs
crates/rag-core/src/search/: keyword.rs  mod.rs  rrf.rs  vector.rs
crates/rag-core/tests/: concurrency.rs  consistency.rs  duplicate_chunks.rs  ignore_behavior.rs  lifecycle.rs  prune.rs  reindex.rs  search.rs  status_transitions.rs
crates/rag-core/tests/common/: mod.rs
crates/vault-core/: Cargo.toml
crates/vault-core/src/: connection.rs  error.rs  ignore.rs  lib.rs  lock.rs  migrations.rs  path.rs
docs/adr/: 0001-rust-language.md  0002-candle-embedder.md  0003-pandoc-extractor.md  0004-database-as-vault.md  0005-snapshot-semantics.md  0006-consistency-invariant.md
