[package]
name = "vault-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
rusqlite.workspace = true
sqlite-vec.workspace = true
ignore.workspace = true
walkdir.workspace = true
fs2.workspace = true

[dev-dependencies]
tempfile = "3.10"
